@@ -1,7 +1,7 @@
 Package: mrfDepth
 Type: Package
-Version: 1.0.9
-Date: 2018-09-25
+Version: 1.0.10
+Date: 2018-10-12
 Title: Depth Measures in Multivariate, Regression and Functional
         Settings
 Description: Tools to compute depth measures and implementations of related 
@@ -26,7 +26,7 @@ URL: https://github.com/PSegaert/mrfDepth
 BugReports: https://github.com/PSegaert/mrfDepth/issues
 RoxygenNote: 6.1.0
 NeedsCompilation: yes
-Packaged: 2018-09-25 18:15:54 UTC; u0105404
+Packaged: 2018-10-12 08:57:05 UTC; u0105404
 Author: Pieter Segaert [aut],
   Mia Hubert [aut],
   Peter Rousseeuw [aut],
@@ -34,4 +34,4 @@ Author: Pieter Segaert [aut],
   Kaveh Vakili [ctb]
 Maintainer: Jakob Raymaekers <jakob.raymaekers@kuleuven.be>
 Repository: CRAN
-Date/Publication: 2018-09-26 14:30:03 UTC
+Date/Publication: 2018-10-12 09:40:02 UTC
